syntax = "proto3";

package rivet.backend.pkg.game.resolve_namespace_id;

import "legacy/proto/common.proto";

message Request {
	repeated rivet.common.Uuid namespace_ids = 1;
}

message Response {
	message Game {
		rivet.common.Uuid game_id = 1;
		repeated rivet.common.Uuid namespace_ids = 2;
	}

	repeated Game games = 1;
}

message Cache {
	rivet.common.Uuid game_id = 1;
	rivet.common.Uuid namespace_id = 2;
}
